# mlflow-exploration

./: 1_create_models.py  2_populate_iris.py  3_populate_diabetes.py  CreateModels.py  Forecasting Wind Power.py  Questions.md  README.md  a..json  ingest.ipynb  iris.json  mlflow.ipynb  notes.md  pyproject.toml  reset_stages.py  run.sh
descriptions/: Diabetes.md  Forecasting Wind Power.md  Iris.md
models/: Forecasting Wind Power.ipynb  Iris.ipynb  diabetes.ipynb  iris.ipynb
