[tool.poetry]
name = "mlflow-exploration"
version = "0.1.0"
description = ""
authors = ["Gustavo Teixeira <contact@gustavoteixeira.dev>"]
readme = "README.md"
packages = [{include = "mlflow_exploration"}]

[tool.poetry.dependencies]
python = "^3.11"
fromconfig-mlflow = "^0.4.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
flask = "^2.3.2"
gunicorn = "^21.2.0"
querystring-parser = "^1.2.4"
setuptools = "^68.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
