[tool.poetry]
name = "mlflow-exploration"
version = "0.1.0"
description = ""
authors = ["Gustavo Teixeira <contact@gustavoteixeira.dev>"]
readme = "README.md"
packages = [{include = "mlflow_exploration"}]

[tool.poetry.dependencies]
python = "^3.11"
fromconfig-mlflow = "^0.4.0"
pandas = "^1.3.3"  # Change the version to a compatible one
scikit-learn = "^1.3.0"
numpy = "^1.22"  # Change the version to a compatible one
matplotlib = "^3.4.3"  # You may need to specify a compatible version here too
flask = "^2.3.2"
gunicorn = "^21.2.0"
querystring-parser = "^1.2.4"
setuptools = "^68.0.0"
verta = "^0.24.0"
hyperopt = "^0.2.7"
pyspark = "^3.4.1"
findspark = "^2.0.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
